# helloc

./: .gitmodules  CMakeLists.txt  README.md
src/: main.c
